--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
-@tailwind base; @tailwind components; @tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  margin: 0;
+  -webkit-tap-highlight-color: transparent;
+}
